# datara

./: .gitignore  .vercelignore  Procfile  README.md  SYSTEM_OVERVIEW.md  build.py  nixpacks.toml  pyproject.toml  requirements.txt  start_backend.bat  start_frontend.bat  start_pipeline.bat  vercel.json
.claude/: settings.json
api/: index.py
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: budget.py  chat.py  routes.py  upload.py
backend/app/core/: data_store.py
backend/app/models/: schemas.py
backend/pipeline/: run_pipeline.py
backend/pipeline/aggregator/: regional_aggregator.py
backend/pipeline/explainer/: explainer.py
backend/pipeline/ingestion/: ingest.py
backend/pipeline/profiler/: teacher_profiler.py
backend/pipeline/recommender/: intervention_recommender.py
backend/pipeline/uai/: uai_engine.py
data/synthetic/: generate_data.py
data/uploads/: nat_scores.csv  schools.csv  teachers.csv  training_logs.csv
frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/assets/css/: main.css
frontend/components/: AiChat.client.vue
frontend/components/charts/: FactorRadar.client.vue  RegionHeatmap.vue  UAIBar.client.vue
frontend/components/dashboard/: DivisionCard.vue
frontend/components/map/: PhilippinesMap.client.vue
frontend/components/ui/: InterventionBadge.vue  StatCard.vue  TierBadge.vue
frontend/composables/: useApi.ts  useUtils.ts
frontend/pages/: index.vue
frontend/pages/budget/: index.vue
frontend/pages/map/: index.vue
frontend/types/: index.ts
(+5 files in other folders)
