[project]
name = "starsight-api"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "pandas==2.2.2",
  "numpy==1.26.4",
  "scikit-learn==1.4.2",
  "pydantic==2.7.1",
  "python-dotenv==1.0.1",
  "psycopg2-binary==2.9.9",
  "sqlalchemy==2.0.30",
  "alembic==1.13.1",
  "faker==24.9.0",
  "openpyxl==3.1.2"
]

[project.scripts]
app = "backend.app.main:app"

[tool.vercel.scripts]
build = "python build.py"
